--- a/react_notes/package.json
+++ b/react_notes/package.json
@@ -14,7 +14,8 @@
     "next": "latest",
     "react": "latest",
     "react-dom": "latest",
-    "react-icons": "^4.11.0",
+    "react-hook-form": "^7.48.2",
+    "react-icons": "^4.12.0",
     "uuidv4": "^6.2.13"
   },
   "devDependencies": {
