--- a/react_notes/package.json
+++ b/react_notes/package.json
@@ -16,6 +16,7 @@
     "react-dom": "latest",
     "react-hook-form": "^7.48.2",
     "react-icons": "^4.12.0",
+    "react-loading": "^2.0.3",
     "uuidv4": "^6.2.13"
   },
   "devDependencies": {
