--- a/react_notes/package.json
+++ b/react_notes/package.json
@@ -17,6 +17,7 @@
     "react-hook-form": "^7.48.2",
     "react-icons": "^4.12.0",
     "react-loading": "^2.0.3",
+    "tailwindcss-animated": "^1.0.1",
     "uuidv4": "^6.2.13"
   },
   "devDependencies": {
